Re-enable CI
Signed-off-by: tinker-michaelj <michael.tinker@hedera.com>